--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,38 @@
 cmake_minimum_required(VERSION 3.13)
-project(cinnamon VERSION 0.1.0 LANGUAGES C CXX)
+project(cinnamon VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-# Include all cmake files in /cmake directory.
+# -----------------------------------------------------------------------------
+# Setup dependencies.
+# -----------------------------------------------------------------------------
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/onnxruntimeConfig.cmake)
-# Find dependencies.
 find_package(onnxruntime)
 
-# Make library
-INCLUDE(GNUInstallDirs)
-
-set(PUBLIC_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include)
-#
-set(PRIVATE_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/headers)
-set(LIBRARY_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/modules)
-#
-add_library(${PROJECT_NAME} SHARED ${PRIVTAE_HEADER_FILES} ${LIBRARY_SOURCE_FILES})
-#
-target_include_directories(${PROJECT_NAME} PRIVATE 
-  $<BUILD_INTERFACE:${PRIVATE_HEADER_FILES}> 
-  $<INSTALL_INTERFACE:include/${PROJECT_NAME}>
+# -----------------------------------------------------------------------------
+# Build Cinnamon Runtime library.
+# -----------------------------------------------------------------------------
+set(LIB_NAME cinnamon)
+# Setup headers and sources directory.
+set(LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(LIB_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/modules)
+set(LIB_PRIV_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/headers)
+# Scan all source files.
+file(GLOB LIB_SRC_FILES 
+  ${LIB_SRC_DIR}/model/*.cpp
 )
-#
-target_include_directories(${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${PUBLIC_HEADER_FILES}>
-  $<INSTALL_INTERFACE:include>
-)
-set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
+# Build library from headers and source files.
+add_library(${LIB_NAME} SHARED ${LIB_HEADERS} ${LIB_PRIV_HEADERS} ${LIB_SRC_FILES})
+# Link dependencies.
+target_link_libraries(${LIB_NAME} onnxruntime)
+# When library is exposed, use #include <cinnamon/abc.h>
+target_include_directories(${LIB_NAME} PUBLIC $<BUILD_INTERFACE:${LIB_HEADERS}> $<INSTALL_INTERFACE:include>)
+# Internally, use #include "abc.h"
+target_include_directories(${LIB_NAME} PRIVATE $<BUILD_INTERFACE:${LIB_HEADERS}/${LIB_NAME}> $<INSTALL_INTERFACE:include/${LIB_NAME}>)
+# Set library properties.
+set_target_properties(${LIB_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
-# Make executable
-add_executable(hello_cinnamon tests/hello.cpp)
-add_dependencies(hello_cinnamon ${PROJECT_NAME})
-# Link libraries.
-target_link_libraries(hello_cinnamon ${onnxruntime_LIBRARY} ${PROJECT_NAME})
+# -----------------------------------------------------------------------------
+# Buil executable and tests.
+# -----------------------------------------------------------------------------
+add_executable(hello tests/hello.cpp)
+target_link_libraries(hello cinnamon)
